[package]
name = "icedchef"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
iced = {version = "0.12", features = ["async-std", "debug"] }
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
